--- a/substrate/frame/revive/rpc/Cargo.toml
+++ b/substrate/frame/revive/rpc/Cargo.toml
@@ -43,33 +43,36 @@ path = "examples/rust/remark-extrinsic.rs"
 required-features = ["example"]
 
 [dependencies]
-clap = { workspace = true, features = ["derive"] }
 anyhow = { workspace = true }
-futures = { workspace = true, features = ["thread-pool"] }
-jsonrpsee = { workspace = true, features = ["full"] }
-thiserror = { workspace = true }
-sp-crypto-hashing = { workspace = true }
-subxt = { workspace = true, default-features = true, features = [
-	"reconnecting-rpc-client",
-] }
-tokio = { workspace = true, features = ["full"] }
+clap = { workspace = true, features = ["derive"] }
 codec = { workspace = true, features = ["derive"] }
+ethabi = { version = "18.0.0" }
+futures = { workspace = true, features = ["thread-pool"] }
+hex = { workspace = true }
+jsonrpsee = { workspace = true, features = ["full"] }
 log = { workspace = true }
 pallet-revive = { workspace = true, default-features = true }
-sp-core = { workspace = true, default-features = true }
-sp-weights = { workspace = true, default-features = true }
-sc-rpc = { workspace = true, default-features = true }
-sc-rpc-api = { workspace = true, default-features = true }
-sc-cli = { workspace = true, default-features = true }
-sc-service = { workspace = true, default-features = true }
 prometheus-endpoint = { workspace = true, default-features = true }
 rlp = { workspace = true, optional = true }
+sc-cli = { workspace = true, default-features = true }
+sc-rpc = { workspace = true, default-features = true }
+sc-rpc-api = { workspace = true, default-features = true }
+sc-service = { workspace = true, default-features = true }
+sp-core = { workspace = true, default-features = true }
+sp-crypto-hashing = { workspace = true }
+sp-weights = { workspace = true, default-features = true }
+sqlx = { version = "0.8.2", features = [
+	"macros",
+	"postgres",
+	"runtime-tokio",
+	"sqlite",
+] }
+subxt = { workspace = true, default-features = true, features = ["reconnecting-rpc-client"] }
 subxt-signer = { workspace = true, optional = true, features = [
 	"unstable-eth",
 ] }
-hex = { workspace = true }
-ethabi = { version = "18.0.0" }
-sqlx = { version = "0.8.2", features = ["macros", "runtime-tokio", "postgres", "sqlite"] }
+thiserror = { workspace = true }
+tokio = { workspace = true, features = ["full"] }
 
 [features]
 example = ["rlp", "subxt-signer"]
@@ -77,7 +80,7 @@ sqlite = []
 
 [dev-dependencies]
 env_logger = { workspace = true }
-static_init = { workspace = true }
 pallet-revive-fixtures = { workspace = true, default-features = true }
+static_init = { workspace = true }
 substrate-cli-test-utils = { workspace = true }
 subxt-signer = { workspace = true, features = ["unstable-eth"] }
