--- a/substrate/frame/examples/view-functions/Cargo.toml
+++ b/substrate/frame/examples/view-functions/Cargo.toml
@@ -4,6 +4,7 @@ version = "1.0.0"
 authors.workspace = true
 edition.workspace = true
 license.workspace = true
+homepage.workspace = true
 repository.workspace = true
 description = "Pallet to demonstrate the usage of view functions to query pallet state"
 
@@ -14,21 +15,21 @@ workspace = true
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false }
+codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, workspace = true }
 frame-metadata = { features = ["current"], workspace = true }
 log = { workspace = true }
-scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }
+scale-info = { version = "2.11.1", default-features = false, features = ["derive"], workspace = true }
 
-frame-support = { path = "../../support", default-features = false }
-frame-system = { path = "../../system", default-features = false }
+frame-support = { path = "../../support", default-features = false, workspace = true }
+frame-system = { path = "../../system", default-features = false, workspace = true }
 
-sp-core = { default-features = false, path = "../../../primitives/core" }
-sp-io = { path = "../../../primitives/io", default-features = false }
-sp-metadata-ir = { path = "../../../primitives/metadata-ir", default-features = false }
-sp-runtime = { path = "../../../primitives/runtime", default-features = false }
-sp-std = { path = "../../../primitives/std", default-features = false }
+sp-core = { default-features = false, path = "../../../primitives/core", workspace = true }
+sp-io = { path = "../../../primitives/io", default-features = false, workspace = true }
+sp-metadata-ir = { path = "../../../primitives/metadata-ir", default-features = false, workspace = true }
+sp-runtime = { path = "../../../primitives/runtime", default-features = false, workspace = true }
+sp-std = { path = "../../../primitives/std", default-features = false, workspace = true }
 
-frame-benchmarking = { path = "../../benchmarking", default-features = false, optional = true }
+frame-benchmarking = { path = "../../benchmarking", default-features = false, optional = true, workspace = true }
 
 [dev-dependencies]
 pretty_assertions = { version = "1.3.0" }
