--- a/substrate/frame/Cargo.toml
+++ b/substrate/frame/Cargo.toml
@@ -43,6 +43,7 @@ sp-consensus-grandpa = { optional = true, workspace = true }
 sp-genesis-builder = { optional = true, workspace = true }
 sp-inherents = { optional = true, workspace = true }
 sp-keyring = { optional = true, workspace = true }
+sp-mmr-primitives = { optional = true, workspace = true }
 sp-offchain = { optional = true, workspace = true }
 sp-session = { optional = true, workspace = true }
 sp-storage = { optional = true, workspace = true }
@@ -78,6 +79,7 @@ runtime = [
 	"sp-genesis-builder",
 	"sp-inherents",
 	"sp-keyring",
+	"sp-mmr-primitives",
 	"sp-offchain",
 	"sp-session",
 	"sp-storage",
@@ -105,6 +107,7 @@ std = [
 	"sp-inherents?/std",
 	"sp-io/std",
 	"sp-keyring?/std",
+	"sp-mmr-primitives?/std",
 	"sp-offchain?/std",
 	"sp-runtime/std",
 	"sp-session?/std",
