--- a/.github/workflows/build-publish-eth-rpc.yml
+++ b/.github/workflows/build-publish-eth-rpc.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - 1017003-eth-rpc
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review, labeled]
 
