--- a/cumulus/parachains/integration-tests/emulated/tests/assets/asset-hub-next-westend/Cargo.toml
+++ b/cumulus/parachains/integration-tests/emulated/tests/assets/asset-hub-next-westend/Cargo.toml
@@ -32,11 +32,13 @@ sp-runtime = { workspace = true }
 pallet-xcm = { workspace = true }
 polkadot-runtime-common = { workspace = true, default-features = true }
 xcm = { workspace = true }
+xcm-builder = { workspace = true }
 xcm-executor = { workspace = true }
 xcm-runtime-apis = { workspace = true }
 
 # Cumulus
 asset-test-utils = { workspace = true, default-features = true }
+assets-common = { workspace = true }
 cumulus-pallet-parachain-system = { workspace = true }
 cumulus-pallet-xcmp-queue = { workspace = true }
 emulated-integration-tests-common = { workspace = true }
