--- a/substrate/frame/migrations/Cargo.toml
+++ b/substrate/frame/migrations/Cargo.toml
@@ -13,22 +13,16 @@ targets = ["x86_64-unknown-linux-gnu"]
 [dependencies]
 cfg-if = { workspace = true }
 codec = { features = ["derive"], workspace = true }
+frame = { workspace = true, features = ["experimental", "runtime"]}
 docify = { workspace = true }
 impl-trait-for-tuples = { workspace = true }
 log = { workspace = true, default-features = true }
 scale-info = { features = ["derive"], workspace = true }
 
-frame-benchmarking = { optional = true, workspace = true }
-frame-support = { workspace = true }
-frame-system = { workspace = true }
-sp-core = { workspace = true }
-sp-runtime = { workspace = true }
 
 [dev-dependencies]
 frame-executive = { workspace = true, default-features = true }
-sp-api = { features = ["std"], workspace = true, default-features = true }
 sp-block-builder = { features = ["std"], workspace = true, default-features = true }
-sp-io = { features = ["std"], workspace = true, default-features = true }
 sp-tracing = { features = ["std"], workspace = true, default-features = true }
 sp-version = { features = ["std"], workspace = true, default-features = true }
 
@@ -39,25 +33,15 @@ default = ["std"]
 
 std = [
 	"codec/std",
-	"frame-benchmarking?/std",
-	"frame-support/std",
-	"frame-system/std",
 	"log/std",
 	"scale-info/std",
-	"sp-core/std",
-	"sp-runtime/std",
+	"frame/std",
 ]
 
 runtime-benchmarks = [
-	"frame-benchmarking/runtime-benchmarks",
-	"frame-support/runtime-benchmarks",
-	"frame-system/runtime-benchmarks",
-	"sp-runtime/runtime-benchmarks",
 ]
 
 try-runtime = [
 	"frame-executive/try-runtime",
-	"frame-support/try-runtime",
-	"frame-system/try-runtime",
-	"sp-runtime/try-runtime",
+	"frame/try-runtime",
 ]
