--- a/substrate/frame/nomination-pools/fuzzer/Cargo.toml
+++ b/substrate/frame/nomination-pools/fuzzer/Cargo.toml
@@ -18,14 +18,10 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 honggfuzz = { workspace = true }
-
+frame = { workspace = true, features = ["experimental", "runtime"]}
 pallet-nomination-pools = { features = ["fuzzing"], workspace = true, default-features = true }
 
-frame-support = { workspace = true, default-features = true }
-frame-system = { workspace = true, default-features = true }
 
-sp-io = { workspace = true, default-features = true }
-sp-runtime = { workspace = true, default-features = true }
 sp-tracing = { workspace = true, default-features = true }
 
 log = { workspace = true, default-features = true }
