--- a/.github/workflows/zombienet-reusable-preflight.yml
+++ b/.github/workflows/zombienet-reusable-preflight.yml
@@ -143,3 +143,40 @@ jobs:
         run: |
           echo "workflow file: ${{ steps.current_file.outputs.currentWorkflowFile }}"
           echo "Modified: ${{ steps.set_changes.outputs.modified_keys }}"
+
+  #
+  #
+  #
+  ci-versions:
+    needs: [preflight]
+    runs-on: ubuntu-latest
+    container:
+      image: ${{ needs.preflight.outputs.ZOMBIENET_IMAGE }}
+    steps:
+      - name: Info rust
+        run: |
+          rustup show
+          cargo --version
+          cargo +nightly --version
+          cargo clippy --version
+
+      - name: Info vars
+        run: |
+          echo "ZOMBIENET_IMAGE: ${{ needs.preflight.outputs.ZOMBIENET_IMAGE }}"
+          echo "ZOMBIENET_RUNNER: ${{ needs.preflight.outputs.ZOMBIENET_RUNNER }}"
+          echo "DOCKER_IMAGES_VERSION: ${{ needs.preflight.outputs.DOCKER_IMAGES_VERSION }}"
+          echo "REF_SLUG: ${{ needs.preflight.outputs.REF_SLUG }}"
+          echo "RUNNER: ${{ needs.preflight.outputs.RUNNER }}"
+          echo "IMAGE: ${{ needs.preflight.outputs.IMAGE }}"
+          echo "SOURCE_REF_SLUG: ${{ needs.global_preflight.outputs.SOURCE_REF_SLUG }}"
+          echo "PUSHGATEWAY_URL: ${{ needs.preflight.outputs.PUSHGATEWAY_URL }}"
+          echo "DEBUG: ${{ needs.preflight.outputs.DEBUG }}"
+          echo "ZOMBIE_PROVIDER: ${{ needs.preflight.outputs.ZOMBIE_PROVIDER }}"
+          echo "RUST_LOG: ${{ needs.preflight.outputs.RUST_LOG }}"
+          echo "RUN_IN_CI: ${{ needs.preflight.outputs.RUN_IN_CI }}"
+          echo "KUBERNETES_CPU_REQUEST: ${{ needs.preflight.outputs.KUBERNETES_CPU_REQUEST }}"
+          echo "KUBERNETES_MEMORY_REQUEST: ${{ needs.preflight.outputs.KUBERNETES_MEMORY_REQUEST }}"
+          #
+          echo "github.ref: ${{ github.ref }}"
+          echo "github.ref_name: ${{ github.ref_name }}"
+          echo "github.sha: ${{ github.sha }}"
