--- a/substrate/frame/Cargo.toml
+++ b/substrate/frame/Cargo.toml
@@ -48,6 +48,7 @@ sp-session = { optional = true, workspace = true }
 sp-storage = { optional = true, workspace = true }
 sp-transaction-pool = { optional = true, workspace = true }
 sp-version = { optional = true, workspace = true }
+sp-staking = { optional = true, workspace = true }
 
 frame-executive = { optional = true, workspace = true }
 frame-system-rpc-runtime-api = { optional = true, workspace = true }
@@ -109,6 +110,7 @@ std = [
 	"sp-runtime/std",
 	"sp-session?/std",
 	"sp-storage/std",
+	"sp-staking/std",
 	"sp-transaction-pool?/std",
 	"sp-version?/std",
 ]
