--- a/.github/workflows/zombienet_substrate.yml
+++ b/.github/workflows/zombienet_substrate.yml
@@ -17,7 +17,7 @@ jobs:
   zombienet-substrate-0000-block-building:
     needs: [preflight]
     # only run if we have changes in ./substrate directory and the build workflow already finish with success status.
-    if: ${{ needs.preflight.outputs.changes_substrate && github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ (needs.preflight.outputs.changes_substrate && github.event.workflow_run.conclusion == 'success') || github.event_name == 'workflow_dispatch' }}
     runs-on: ${{ needs.preflight.outputs.ZOMBIENET_RUNNER }}
     timeout-minutes: 60
     container:
