--- a/substrate/frame/examples/split/Cargo.toml
+++ b/substrate/frame/examples/split/Cargo.toml
@@ -20,32 +20,18 @@ targets = ["x86_64-unknown-linux-gnu"]
 codec = { workspace = true }
 log = { workspace = true }
 scale-info = { features = ["derive"], workspace = true }
+frame = { workspace = true, features = ["experimental", "runtime"]}
 
-frame-support = { workspace = true }
-frame-system = { workspace = true }
-
-sp-io = { workspace = true }
-
-frame-benchmarking = { optional = true, workspace = true }
-
-[dev-dependencies]
-sp-core = { workspace = true }
 
 [features]
 default = ["std"]
 std = [
 	"codec/std",
-	"frame-benchmarking?/std",
-	"frame-support/std",
-	"frame-system/std",
 	"log/std",
 	"scale-info/std",
-	"sp-core/std",
-	"sp-io/std",
+	"frame/std",
 ]
-runtime-benchmarks = [
-	"frame-benchmarking/runtime-benchmarks",
-	"frame-support/runtime-benchmarks",
-	"frame-system/runtime-benchmarks",
+
+try-runtime = [
+	"frame/try-runtime",
 ]
-try-runtime = ["frame-support/try-runtime", "frame-system/try-runtime"]
