--- a/.github/workflows/cmd.yml
+++ b/.github/workflows/cmd.yml
@@ -221,6 +221,7 @@ jobs:
     env:
       JOB_NAME: "cmd"
       CMD: ${{ needs.get-pr-info.outputs.CMD }}
+      PR_BRANCH: ${{ needs.get-pr-info.outputs.pr-branch }}
     runs-on: ${{ needs.set-image.outputs.RUNNER }}
     container:
       image: ${{ needs.set-image.outputs.IMAGE }}
@@ -314,61 +315,6 @@ jobs:
             echo 'EOF' >> $GITHUB_OUTPUT
           fi
       
-          # Stage all changes including new files
-          git add -A
-          git diff --staged > diff-command.patch
-          git reset
-
-      - name: Upload diff
-        uses: actions/upload-artifact@v4
-        with:
-          name: diff-command
-          path: diff-command.patch
-
-      - name: Upload command output
-        if: ${{ always() }}
-        uses: actions/upload-artifact@v4
-        with:
-          name: command-output
-          path: /tmp/cmd/command_output.log
-
-  after-cmd:
-    runs-on: ${{ needs.set-image.outputs.RUNNER }}
-    container:
-      image: ${{ needs.set-image.outputs.IMAGE }} 
-    env:
-      PR_BRANCH: ${{ needs.get-pr-info.outputs.pr-branch }}
-      CMD: ${{ needs.get-pr-info.outputs.CMD }}
-    needs: [set-image, get-pr-info, cmd]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          repository: ${{ needs.get-pr-info.outputs.repo }}
-          ref: ${{ env.PR_BRANCH }}
-
-      - name: Download all artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: patches
-
-      - name: Commit changes
-        run: |
-          ls -lsaR patches
-
-          git config --global --add safe.directory '*'
-          
-          for file in patches/diff-*/diff-*.patch; do
-            if [ -f "$file" ] && [ -s "$file" ]; then
-              echo "Applying $file"
-              git apply "$file"
-            else
-              echo "Skipping empty patch file: $file"
-            fi
-          done
-
-          rm -rf patches
-
           git status
           
           if [ -n "$(git status --porcelain)" ]; then
@@ -399,6 +345,13 @@ jobs:
           else
             echo "Nothing to commit";
           fi
+
+      - name: Upload command output
+        if: ${{ always() }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: command-output
+          path: /tmp/cmd/command_output.log
 
       - name: Install subweight for bench
         if: startsWith(needs.get-pr-info.outputs.CMD, 'bench')
@@ -432,11 +385,11 @@ jobs:
         uses: actions/github-script@v7
         env:
           SUBWEIGHT: "${{ steps.subweight.outputs.result }}"
-          CMD_OUTPUT: "${{ needs.cmd.outputs.cmd_output }}"
+          CMD_OUTPUT: "${{ steps.cmd.outputs.cmd_output }}"
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            let runUrl = ${{ needs.cmd.outputs.run_url }}
+            let runUrl = ${{ steps.build-link.outputs.run_url }}
             let subweight = process.env.SUBWEIGHT;
             let cmdOutput = process.env.CMD_OUTPUT;
             let cmd = process.env.CMD;
@@ -461,11 +414,11 @@ jobs:
         if: ${{ failure() && !contains(github.event.comment.body, '--quiet') }}
         uses: actions/github-script@v7
         env:
-          CMD_OUTPUT: "${{ needs.cmd.outputs.cmd_output }}"
+          CMD_OUTPUT: "${{ steps.cmd.outputs.cmd_output }}"
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            let jobUrl = ${{ needs.cmd.outputs.job_url }}
+            let jobUrl = ${{ steps.build-link.outputs.job_url }}
             let cmdOutput = process.env.CMD_OUTPUT;
             let cmd = process.env.CMD;
 
